--- a/sobre.html
+++ b/sobre.html
@@ -14,90 +14,78 @@
 	</head>
     <body>
         <div id="container">
-            <header>
-                <nav>
-                    <ul class="nav">
-                        <li class="nav-item">
-                          <a class="nav-link">&nbsp;</a>
-                        </li>
-                        <li class="nav-item">
-                          <a class="nav-link">&nbsp;</a>
-                        </li>
-                        <li class="nav-item">
-                          <a class="nav-link1" href="index.html">História do Wolverine</a>
-                        </li>
-                        <li class="nav-item">
-                          <a class="nav-link">&nbsp;</a>
-                        </li>
-                        <li class="nav-item">
-                          <a class="nav-link">&nbsp;</a>
-                        </li>
-                        <li class="nav-item">
-                          <a class="nav-link">&nbsp;</a>
-                        </li>
-                        <li class="nav-item">
-                          <a class="nav-link">&nbsp;</a>
-                        </li>
-                        <li class="nav-item">
-                          <a class="nav-link">&nbsp;</a>
-                        </li>
-                        <li class="nav-item">
-                          <a class="nav-link">&nbsp;</a>
-                        </li>
-                        <li class="nav-item">
-                          <a class="nav-link">&nbsp;</a>
-                        </li>
-                        <li class="nav-item">
-                          <a class="nav-link">&nbsp;</a>
-                        </li>
-                        <li class="nav-item">
-                          <a class="nav-link">&nbsp;</a>
-                        </li>
-                        <li class="nav-item">
-                          <a class="nav-link">&nbsp;</a>
-                        </li>
-                        <li class="nav-item">
-                          <a class="nav-link">&nbsp;</a>
-                        </li>
-                        <li class="nav-item">
-                          <a class="nav-link">&nbsp;</a>
-                        </li>
-                        <li class="nav-item">
-                          <a class="nav-link">&nbsp;</a>
-                        </li>
-                        <li class="nav-item">
-                          <a class="nav-link">&nbsp;</a>
-                        </li>
-                        <li class="nav-item">
-                          <a class="nav-link">&nbsp;</a>
-                        </li>
-                        <li class="nav-item">
-                          <a class="nav-link">&nbsp;</a>
-                        </li>
-                        <li class="nav-item">
-                          <a class="nav-link">&nbsp;</a>
-                        </li>
-                        <li class="nav-item">
-                          <a class="nav-link">&nbsp;</a>
-                        </li>
-                        <li class="nav-item">
-                          <a class="nav-link">&nbsp;</a>
-                        </li>
-                        <li class="nav-item">
-                          <a class="nav-link" href="index.html">Home&nbsp;</a>
-                        </li>
-                        <li class="nav-item">
-                          <a class="nav-link active" href="sobre.html">Sobre&nbsp;</a>
-                        </li>
-                        <li class="nav-item">
-                          <a class="nav-link" href="galeria.html">Galeria&nbsp;</a>
-                        </li>
-                        <li class="nav-item">
-                          <a class="nav-link" href="contato.html">Contato&nbsp;</a>
-                        </li>
-                    </ul>
-                </nav>
-            </header>
+          <header>
+            <nav>
+                <ul class="nav">
+                    <li class="nav-item">
+                      <a class="nav-link">&nbsp;</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link">&nbsp;</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link1" href="index.html">História do Wolverine</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link">&nbsp;</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link">&nbsp;</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link">&nbsp;</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link">&nbsp;</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link">&nbsp;</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link">&nbsp;</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link">&nbsp;</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link">&nbsp;</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link">&nbsp;</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link">&nbsp;</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link">&nbsp;</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link">&nbsp;</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link">&nbsp;</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link">&nbsp;</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link">&nbsp;</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link" href="index.html">Home&nbsp;</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link active" href="sobre.html">Sobre&nbsp;</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link" href="galeria.html">Galeria&nbsp;</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link" href="contato.html">Contato&nbsp;</a>
+                    </li>
+                </ul>
+            </nav>
+        </header>
             <main>
               <div class="card mb-3">
                 <img class="card-img-top2" src="img/wolverine-card-sobre.jpg" alt="Imagem de capa do card">
@@ -180,7 +168,7 @@
                   </div>
                 </div>
                 <div class="card">
-                  <img class="card-img-top" src="img/wolverine-card_hulk.png" alt="Imagem de capa do card">
+                  <img class="card-img-top4" src="img/wolverine-card_hulk.png" alt="Imagem de capa do card">
                   <div class="card-body">
                     <h5 class="card-title">Matou o Hulk</h5>
                     <p class="card-text">
